--- a/gobotany/static/sass/_taxa.scss
+++ b/gobotany/static/sass/_taxa.scss
@@ -260,7 +260,6 @@ body.taxa {
             }
         }
         a {
-            margin-left: 0;
             &.enlarge {
                 color: #1a2e11;
                 display: block;
